assets/css/style.css
:root{
    --light-color: #f0f0f1;
    --dark-color: #647279;
}

body {
    background-color: var(--light-color);
}
header {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    background-color: var(--dark-color);
    height: 100px;
    padding: 20px;
}
header h1 {
   display: flex;
   flex-wrap: wrap;
   align-items: center;

}
header h1 a{
   display: flex;
   flex-wrap: wrap;
   text-decoration: none;
   font-weight: bold;
   color: var(--light-color);
   padding: 10px;
   font-family: 'Space Grotesk', sans-serif;;
   font-size: 40px;
}
header nav {
    display: flex;
    justify-content: flex-end;
}
header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-items: flex-end;
    list-style: none;
    width: 500px;

}
header nav ul li a{
    display: flex;
    flex-wrap: wrap;
    margin: 5px;
    padding: 5px;
    color: var(--light-color);

}

/*Hero Starts*/

.hero {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    height: 400px;
    width: 100%;
    background-size: cover;
    background-image: url("../images/hero-bg.jpg");  
}
.hero h1 {
    display: flex;
    flex-wrap: wrap;
    align-self: flex-end;
    margin: 10px 10px 0px;
    font-family: 'Montserrat', sans-serif;
    font-size: 70px;
}

/*Hero Ends*/

/*About Me Starts*/

.about {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    height: 200px;

}
.about h2 {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    padding: 0px 10px;
    margin: 10px;
    text-align: right;
    width: 20%;
    border-right: 2px solid #4f99cc;
}
.about p {
    display: flex;
    flex-wrap: wrap;
    padding: 20px;
    margin: 20px;
    width: 70%;
    border: solid 2px  var(--dark-color);
}



/*Work Starts*/
.work { 
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}
.work h2 {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    padding: 0px 10px;
    margin: 10px;
    text-align: right;
    width: 20%;
    border-right: 2px solid #4f99cc;
}
object {
    display: flex;
    flex-wrap: wrap;
    padding: 20px;
    margin: 20px;
    width: 70%;
    border: solid 2px  var(--dark-color);
}
object section {
    display:flex;
    width: 100%
}
.feature {
    display: flex;
    flex-wrap: wrap;  
    width: 100%;
    margin: 5px;
    height: 250px;
    background-image: url("../images/feature.jpg");
    background-size: cover;
    align-items: flex-end;
}
.feature a {
    background-color: var(--dark-color);
    color:  var(--light-color);
    padding: 2px;
    margin: 0;

}
.work1, .work2, .work3, .work4 {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-end;
    width: 50%;
    margin: 5px;
    height: 100px;
    background-size: cover;
}
.work1 a, .work2 a, .work3 a, .work4 a {
    background-color: var(--dark-color);
    color: var(--light-color);
    padding: 2px;
    margin: 0;
    text-decoration: none;
}
.work1 {
    background-image: url("../images/work1.jpg");
}
.work2 {
    background-image: url("../images/work2.jpg");
}
.work3 {
    background-image: url("../images/work3.jpg");
}
.work4 {
    background-image: url("../images/work4.jpg");   
    }


/*Work Ends*/

/* Contact Starts*/
.contact {
    display:flex;
    flex-wrap: wrap;
    justify-content: space-between;
   
}
.contact h2 {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    padding: 0px 10px;
    margin: 10px;
    text-align: right;
    width: 20%;
    border-right: 2px solid var(--dark-color);
}

 address {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 20px;
     padding: 20px;
     width: 70%;
     border: solid 2px var(--dark-color);
 }

 address div {
     display: flex;
     flex-wrap:wrap;
     margin: 10px;
     padding: 10px;
     
 }
/*Contact Ends*/

.bottom-banner {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    padding: 20px;
}

footer {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    width: 100%;
    background-color: #647279;
}

.profile-pic {
    display: flex;
    flex-wrap: wrap;   
    height: 250px;
    width: 250px;
    margin: 20px;
    border-radius: 50%;
    background-image: url("../images/profilepic.jpeg")
    
} 

